src/org/beetl/core/parser/BeetlParser.java
// Generated from E:\lijz\javamonkey\bee\research\antlrworks2\projects\beetl\BeetlParser.g4 by ANTLR 4.1
package org.beetl.core.parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class BeetlParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		Elsefor=3, Switch=6, COMMENT_TAG=63, Try=15, LEFT_TEXT_TOKEN=53, LARGE_EQUAL=34, 
		OctalLiteral=56, MOD=30, LEFT_ANGULAR=71, INCREASE=23, While=5, NOT=38, 
		ALL_COMMENT_CHAR=65, Case=13, AND=39, RIGHT_TOKEN=52, RIGHT_SQBR=22, DECREASE=24, 
		Identifier=59, Default=14, AT=42, TYPE_END=74, LEFT_TOKEN=51, NOT_EQUAL=32, 
		COMMA=47, EQUAL=31, LESS=37, LEFT_PAR1=68, LEFT_PAR=19, Select=7, PERIOD1=67, 
		MUlTIP=28, Return=8, VIRTUAL=25, If=1, LEFT_SQBR=21, ADD=26, RIGHT_BRACE=18, 
		HexLiteral=54, QUESTOIN=41, Continue=10, LINE_COMMENT=61, Catch=16, PERIOD=49, 
		Identifier1=66, NULL=43, ASSIN=33, COMMENT_OPEN=62, RIGHT_PAR1=69, MIN=27, 
		Directive=12, COMMA1=70, DecimalLiteral=55, For=2, TRUE=44, StringLiteral=58, 
		COLON=48, WS=60, COMMENT_END=64, Break=9, FOR_IN=50, LEFT_BRACE=17, WS1=73, 
		FloatingPointLiteral=57, RIGHT_PAR=20, OR=40, LARGE=35, LESS_EQUAL=36, 
		DIV=29, END=46, RIGHT_ANGULAR=72, Else=4, FALSE=45, Var=11;
	public static final String[] tokenNames = {
		"<INVALID>", "'if'", "'for'", "'elsefor'", "'else'", "'while'", "'switch'", 
		"'select'", "'return'", "'break'", "'continue'", "'var'", "Directive", 
		"'case'", "'default'", "'try'", "'catch'", "'{'", "'}'", "LEFT_PAR", "RIGHT_PAR", 
		"'['", "']'", "'++'", "'--'", "'.~'", "'+'", "'-'", "'*'", "'/'", "'%'", 
		"'=='", "'!='", "'='", "'>='", "LARGE", "'<='", "LESS", "'!'", "'&&'", 
		"'||'", "'?'", "'@'", "'null'", "'true'", "'false'", "';'", "COMMA", "':'", 
		"PERIOD", "'in'", "'<<'", "'>>'", "'<$'", "HexLiteral", "DecimalLiteral", 
		"OctalLiteral", "FloatingPointLiteral", "StringLiteral", "Identifier", 
		"WS", "LINE_COMMENT", "COMMENT_OPEN", "COMMENT_TAG", "COMMENT_END", "ALL_COMMENT_CHAR", 
		"Identifier1", "PERIOD1", "LEFT_PAR1", "RIGHT_PAR1", "COMMA1", "LEFT_ANGULAR", 
		"RIGHT_ANGULAR", "WS1", "TYPE_END"
	};
	public static final int
		RULE_prog = 0, RULE_block = 1, RULE_statement = 2, RULE_commentTypeTag = 3, 
		RULE_commentTypeItemTag = 4, RULE_classOrInterfaceType = 5, RULE_typeArguments = 6, 
		RULE_typeArgument = 7, RULE_directiveExp = 8, RULE_g_switchStatment = 9, 
		RULE_g_caseStatment = 10, RULE_g_defaultStatment = 11, RULE_varDeclareList = 12, 
		RULE_assignMent = 13, RULE_switchBlock = 14, RULE_switchBlockStatementGroup = 15, 
		RULE_switchLabel = 16, RULE_forControl = 17, RULE_parExpression = 18, 
		RULE_expressionList = 19, RULE_statementExpression = 20, RULE_textStatment = 21, 
		RULE_textVar = 22, RULE_textformat = 23, RULE_constantsTextStatment = 24, 
		RULE_constantExpression = 25, RULE_expression = 26, RULE_varRef = 27, 
		RULE_varAttribute = 28, RULE_functionCall = 29, RULE_functionTagCall = 30, 
		RULE_functionNs = 31, RULE_nativeCall = 32, RULE_nativeMethod = 33, RULE_nativeArray = 34, 
		RULE_nativeVarRefChain = 35, RULE_json = 36, RULE_jsonKeyValue = 37, RULE_literal = 38, 
		RULE_booleanLiteral = 39, RULE_arguments = 40;
	public static final String[] ruleNames = {
		"prog", "block", "statement", "commentTypeTag", "commentTypeItemTag", 
		"classOrInterfaceType", "typeArguments", "typeArgument", "directiveExp", 
		"g_switchStatment", "g_caseStatment", "g_defaultStatment", "varDeclareList", 
		"assignMent", "switchBlock", "switchBlockStatementGroup", "switchLabel", 
		"forControl", "parExpression", "expressionList", "statementExpression", 
		"textStatment", "textVar", "textformat", "constantsTextStatment", "constantExpression", 
		"expression", "varRef", "varAttribute", "functionCall", "functionTagCall", 
		"functionNs", "nativeCall", "nativeMethod", "nativeArray", "nativeVarRefChain", 
		"json", "jsonKeyValue", "literal", "booleanLiteral", "arguments"
	};

	@Override
	public String getGrammarFileName() { return "BeetlParser.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public ATN getATN() { return _ATN; }

	public BeetlParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgContext extends ParserRuleContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public TerminalNode EOF() { return getToken(BeetlParser.EOF, 0); }
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(85);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=-1 ) {
				if ( _alt==1 ) {
					{
					{
					setState(82); statement();
					}
					} 
				}
				setState(87);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			setState(88); match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public TerminalNode RIGHT_BRACE() { return getToken(BeetlParser.RIGHT_BRACE, 0); }
		public TerminalNode LEFT_BRACE() { return getToken(BeetlParser.LEFT_BRACE, 0); }
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_block);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(90); match(LEFT_BRACE);
			setState(94);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=-1 ) {
				if ( _alt==1 ) {
					{
					{
					setState(91); statement();
					}
					} 
				}
				setState(96);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			setState(97); match(RIGHT_BRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	 
		public StatementContext() { }
		public void copyFrom(StatementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ForStContext extends StatementContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public TerminalNode For() { return getToken(BeetlParser.For, 0); }
		public TerminalNode RIGHT_PAR() { return getToken(BeetlParser.RIGHT_PAR, 0); }
		public TerminalNode LEFT_PAR() { return getToken(BeetlParser.LEFT_PAR, 0); }
		public ForControlContext forControl() {
			return getRuleContext(ForControlContext.class,0);
		}
		public TerminalNode Elsefor() { return getToken(BeetlParser.Elsefor, 0); }
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public ForStContext(StatementContext ctx) { copyFrom(ctx); }
	}
	public static class CommentTagStContext extends StatementContext {
		public TerminalNode COMMENT_TAG() { return getToken(BeetlParser.COMMENT_TAG, 0); }
		public CommentTypeTagContext commentTypeTag() {
			return getRuleContext(CommentTypeTagContext.class,0);
		}
		public CommentTagStContext(StatementContext ctx) { copyFrom(ctx); }
	}
	public static class BlockStContext extends StatementContext {
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public BlockStContext(StatementContext ctx) { copyFrom(ctx); }
	}
	public static class StatmentExpStContext extends StatementContext {
		public StatementExpressionContext statementExpression() {
			return getRuleContext(StatementExpressionContext.class,0);
		}
		public TerminalNode END() { return getToken(BeetlParser.END, 0); }
		public StatmentExpStContext(StatementContext ctx) { copyFrom(ctx); }
	}
	public static class ReturnStContext extends StatementContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode Return() { return getToken(BeetlParser.Return, 0); }
		public TerminalNode END() { return getToken(BeetlParser.END, 0); }
		public ReturnStContext(StatementContext ctx) { copyFrom(ctx); }
	}
	public static class BreakStContext extends StatementContext {
		public TerminalNode Break() { return getToken(BeetlParser.Break, 0); }
		public TerminalNode END() { return getToken(BeetlParser.END, 0); }
		public BreakStContext(StatementContext ctx) { copyFrom(ctx); }
	}
	public static class DirectiveStContext extends StatementContext {
		public DirectiveExpContext directiveExp() {
			return getRuleContext(DirectiveExpContext.class,0);
		}
		public TerminalNode Directive() { return getToken(BeetlParser.Directive, 0); }
		public DirectiveStContext(StatementContext ctx) { copyFrom(ctx); }
	}
	public static class TextOutputStContext extends StatementContext {
		public TextStatmentContext textStatment() {
			return getRuleContext(TextStatmentContext.class,0);
		}
		public TextOutputStContext(StatementContext ctx) { copyFrom(ctx); }
	}
	public static class VarStContext extends StatementContext {
		public TerminalNode Var() { return getToken(BeetlParser.Var, 0); }
		public TerminalNode END() { return getToken(BeetlParser.END, 0); }
		public VarDeclareListContext varDeclareList() {
			return getRuleContext(VarDeclareListContext.class,0);
		}
		public VarStContext(StatementContext ctx) { copyFrom(ctx); }
	}
	public static class StaticOutputStContext extends StatementContext {
		public ConstantsTextStatmentContext constantsTextStatment() {
			return getRuleContext(ConstantsTextStatmentContext.class,0);
		}
		public StaticOutputStContext(StatementContext ctx) { copyFrom(ctx); }
	}
	public static class ContinueStContext extends StatementContext {
		public TerminalNode Continue() { return getToken(BeetlParser.Continue, 0); }
		public TerminalNode END() { return getToken(BeetlParser.END, 0); }
		public ContinueStContext(StatementContext ctx) { copyFrom(ctx); }
	}
	public static class IfStContext extends StatementContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public ParExpressionContext parExpression() {
			return getRuleContext(ParExpressionContext.class,0);
		}
		public TerminalNode Else() { return getToken(BeetlParser.Else, 0); }
		public TerminalNode If() { return getToken(BeetlParser.If, 0); }
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public IfStContext(StatementContext ctx) { copyFrom(ctx); }
	}
	public static class TryStContext extends StatementContext {
		public TerminalNode Catch() { return getToken(BeetlParser.Catch, 0); }
		public TerminalNode RIGHT_PAR() { return getToken(BeetlParser.RIGHT_PAR, 0); }
		public TerminalNode LEFT_PAR() { return getToken(BeetlParser.LEFT_PAR, 0); }
		public TerminalNode Try() { return getToken(BeetlParser.Try, 0); }
		public BlockContext block(int i) {
			return getRuleContext(BlockContext.class,i);
		}
		public TerminalNode Identifier() { return getToken(BeetlParser.Identifier, 0); }
		public TerminalNode NOT() { return getToken(BeetlParser.NOT, 0); }
		public List<BlockContext> block() {
			return getRuleContexts(BlockContext.class);
		}
		public TryStContext(StatementContext ctx) { copyFrom(ctx); }
	}
	public static class WhileStContext extends StatementContext {
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public TerminalNode While() { return getToken(BeetlParser.While, 0); }
		public ParExpressionContext parExpression() {
			return getRuleContext(ParExpressionContext.class,0);
		}
		public WhileStContext(StatementContext ctx) { copyFrom(ctx); }
	}
	public static class FunctionStContext extends StatementContext {
		public FunctionTagCallContext functionTagCall() {
			return getRuleContext(FunctionTagCallContext.class,0);
		}
		public FunctionStContext(StatementContext ctx) { copyFrom(ctx); }
	}
	public static class SiwchStContext extends StatementContext {
		public ParExpressionContext parExpression() {
			return getRuleContext(ParExpressionContext.class,0);
		}
		public SwitchBlockContext switchBlock() {
			return getRuleContext(SwitchBlockContext.class,0);
		}
		public TerminalNode Switch() { return getToken(BeetlParser.Switch, 0); }
		public SiwchStContext(StatementContext ctx) { copyFrom(ctx); }
	}
	public static class AssignStContext extends StatementContext {
		public AssignMentContext assignMent() {
			return getRuleContext(AssignMentContext.class,0);
		}
		public TerminalNode END() { return getToken(BeetlParser.END, 0); }
		public AssignStContext(StatementContext ctx) { copyFrom(ctx); }
	}
	public static class SelectStContext extends StatementContext {
		public G_switchStatmentContext g_switchStatment() {
			return getRuleContext(G_switchStatmentContext.class,0);
		}
		public TerminalNode Select() { return getToken(BeetlParser.Select, 0); }
		public SelectStContext(StatementContext ctx) { copyFrom(ctx); }
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_statement);
		try {
			setState(164);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				_localctx = new BlockStContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(99); block();
				}
				break;

			case 2:
				_localctx = new TextOutputStContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(100); textStatment();
				}
				break;

			case 3:
				_localctx = new StaticOutputStContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(101); constantsTextStatment();
				}
				break;

			case 4:
				_localctx = new CommentTagStContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(102); match(COMMENT_TAG);
				setState(103); commentTypeTag();
				}
				break;

			case 5:
				_localctx = new IfStContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(104); match(If);
				setState(105); parExpression();
				setState(106); statement();
				setState(109);
				switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
				case 1:
					{
					setState(107); match(Else);
					setState(108); statement();
					}
					break;
				}
				}
				break;

			case 6:
				_localctx = new ForStContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(111); match(For);
				setState(112); match(LEFT_PAR);
				setState(113); forControl();
				setState(114); match(RIGHT_PAR);
				setState(115); statement();
				setState(118);
				switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
				case 1:
					{
					setState(116); match(Elsefor);
					setState(117); statement();
					}
					break;
				}
				}
				break;

			case 7:
				_localctx = new WhileStContext(_localctx);
				enterOuterAlt(_localctx, 7);
				{
				setState(120); match(While);
				setState(121); parExpression();
				setState(122); statement();
				}
				break;

			case 8:
				_localctx = new SiwchStContext(_localctx);
				enterOuterAlt(_localctx, 8);
				{
				setState(124); match(Switch);
				setState(125); parExpression();
				setState(126); switchBlock();
				}
				break;

			case 9:
				_localctx = new SelectStContext(_localctx);
				enterOuterAlt(_localctx, 9);
				{
				setState(128); match(Select);
				setState(129); g_switchStatment();
				}
				break;

			case 10:
				_localctx = new TryStContext(_localctx);
				enterOuterAlt(_localctx, 10);
				{
				setState(130); match(Try);
				setState(132);
				switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
				case 1:
					{
					setState(131); match(NOT);
					}
					break;
				}
				setState(134); block();
				setState(140);
				switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
				case 1:
					{
					setState(135); match(Catch);
					setState(136); match(LEFT_PAR);
					setState(137); match(Identifier);
					setState(138); match(RIGHT_PAR);
					setState(139); block();
					}
					break;
				}
				}
				break;

			case 11:
				_localctx = new ReturnStContext(_localctx);
				enterOuterAlt(_localctx, 11);
				{
				setState(142); match(Return);
				setState(144);
				switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
				case 1:
					{
					setState(143); expression(0);
					}
					break;
				}
				setState(146); match(END);
				}
				break;

			case 12:
				_localctx = new BreakStContext(_localctx);
				enterOuterAlt(_localctx, 12);
				{
				setState(147); match(Break);
				setState(148); match(END);
				}
				break;

			case 13:
				_localctx = new ContinueStContext(_localctx);
				enterOuterAlt(_localctx, 13);
				{
				setState(149); match(Continue);
				setState(150); match(END);
				}
				break;

			case 14:
				_localctx = new VarStContext(_localctx);
				enterOuterAlt(_localctx, 14);
				{
				setState(151); match(Var);
				setState(152); varDeclareList();
				setState(153); match(END);
				}
				break;

			case 15:
				_localctx = new DirectiveStContext(_localctx);
				enterOuterAlt(_localctx, 15);
				{
				setState(155); match(Directive);
				setState(156); directiveExp();
				}
				break;

			case 16:
				_localctx = new AssignStContext(_localctx);
				enterOuterAlt(_localctx, 16);
				{
				setState(157); assignMent();
				setState(158); match(END);
				}
				break;

			case 17:
				_localctx = new FunctionStContext(_localctx);
				enterOuterAlt(_localctx, 17);
				{
				setState(160); functionTagCall();
				}
				break;

			case 18:
				_localctx = new StatmentExpStContext(_localctx);
				enterOuterAlt(_localctx, 18);
				{
				setState(161); statementExpression();
				setState(162); match(END);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CommentTypeTagContext extends ParserRuleContext {
		public TerminalNode COMMA1() { return getToken(BeetlParser.COMMA1, 0); }
		public CommentTypeItemTagContext commentTypeItemTag(int i) {
			return getRuleContext(CommentTypeItemTagContext.class,i);
		}
		public List<CommentTypeItemTagContext> commentTypeItemTag() {
			return getRuleContexts(CommentTypeItemTagContext.class);
		}
		public CommentTypeTagContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_commentTypeTag; }
	}

	public final CommentTypeTagContext commentTypeTag() throws RecognitionException {
		CommentTypeTagContext _localctx = new CommentTypeTagContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_commentTypeTag);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(166); commentTypeItemTag();
			{
			setState(167); match(COMMA1);
			setState(168); commentTypeItemTag();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CommentTypeItemTagContext extends ParserRuleContext {
		public TerminalNode LEFT_PAR1() { return getToken(BeetlParser.LEFT_PAR1, 0); }
		public TerminalNode RIGHT_PAR1() { return getToken(BeetlParser.RIGHT_PAR1, 0); }
		public TerminalNode Identifier1() { return getToken(BeetlParser.Identifier1, 0); }
		public ClassOrInterfaceTypeContext classOrInterfaceType() {
			return getRuleContext(ClassOrInterfaceTypeContext.class,0);
		}
		public CommentTypeItemTagContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_commentTypeItemTag; }
	}

	public final CommentTypeItemTagContext commentTypeItemTag() throws RecognitionException {
		CommentTypeItemTagContext _localctx = new CommentTypeItemTagContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_commentTypeItemTag);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(170); match(LEFT_PAR1);
			setState(171); classOrInterfaceType();
			setState(172); match(RIGHT_PAR1);
			setState(173); match(Identifier1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassOrInterfaceTypeContext extends ParserRuleContext {
		public TerminalNode PERIOD1(int i) {
			return getToken(BeetlParser.PERIOD1, i);
		}
		public TerminalNode Identifier1(int i) {
			return getToken(BeetlParser.Identifier1, i);
		}
		public List<TerminalNode> PERIOD1() { return getTokens(BeetlParser.PERIOD1); }
		public TypeArgumentsContext typeArguments() {
			return getRuleContext(TypeArgumentsContext.class,0);
		}
		public List<TerminalNode> Identifier1() { return getTokens(BeetlParser.Identifier1); }
		public ClassOrInterfaceTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classOrInterfaceType; }
	}

	public final ClassOrInterfaceTypeContext classOrInterfaceType() throws RecognitionException {
		ClassOrInterfaceTypeContext _localctx = new ClassOrInterfaceTypeContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_classOrInterfaceType);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(175); match(Identifier1);
			setState(180);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			while ( _alt!=2 && _alt!=-1 ) {
				if ( _alt==1 ) {
					{
					{
					setState(176); match(PERIOD1);
					setState(177); match(Identifier1);
					}
					} 
				}
				setState(182);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			}
			setState(184);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				{
				setState(183); typeArguments();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeArgumentsContext extends ParserRuleContext {
		public List<TerminalNode> COMMA1() { return getTokens(BeetlParser.COMMA1); }
		public List<TypeArgumentContext> typeArgument() {
			return getRuleContexts(TypeArgumentContext.class);
		}
		public TerminalNode RIGHT_ANGULAR() { return getToken(BeetlParser.RIGHT_ANGULAR, 0); }
		public TypeArgumentContext typeArgument(int i) {
			return getRuleContext(TypeArgumentContext.class,i);
		}
		public TerminalNode COMMA1(int i) {
			return getToken(BeetlParser.COMMA1, i);
		}
		public TerminalNode LEFT_ANGULAR() { return getToken(BeetlParser.LEFT_ANGULAR, 0); }
		public TypeArgumentsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typeArguments; }
	}

	public final TypeArgumentsContext typeArguments() throws RecognitionException {
		TypeArgumentsContext _localctx = new TypeArgumentsContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_typeArguments);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(186); match(LEFT_ANGULAR);
			setState(187); typeArgument();
			setState(192);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
			while ( _alt!=2 && _alt!=-1 ) {
				if ( _alt==1 ) {
					{
					{
					setState(188); match(COMMA1);
					setState(189); typeArgument();
					}
					} 
				}
				setState(194);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
			}
			setState(195); match(RIGHT_ANGULAR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeArgumentContext extends ParserRuleContext {
		public ClassOrInterfaceTypeContext classOrInterfaceType() {
			return getRuleContext(ClassOrInterfaceTypeContext.class,0);
		}
		public TypeArgumentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typeArgument; }
	}

	public final TypeArgumentContext typeArgument() throws RecognitionException {
		TypeArgumentContext _localctx = new TypeArgumentContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_typeArgument);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(197); classOrInterfaceType();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DirectiveExpContext extends ParserRuleContext {
		public TerminalNode Identifier() { return getToken(BeetlParser.Identifier, 0); }
		public TerminalNode StringLiteral() { return getToken(BeetlParser.StringLiteral, 0); }
		public TerminalNode END() { return getToken(BeetlParser.END, 0); }
